Address an IE z-index issue
Fix an issue that IE has with ignoring z-index when the element behind that is overflowing the container.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/modal.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/modal.scss
@@ -96,7 +96,6 @@
 
 .ReactModalPortal {
     z-index: 10;
-    position: relative;
 }
 
 .ReactModal__Overlay {
